[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/garrapata.gd" type="Script" id=1]
[ext_resource path="res://images/garrapata.png" type="Texture" id=2]
[ext_resource path="res://Escenas/RayoLaserGarrapatas.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[node name="garrapata" type="KinematicBody2D" groups=[
"Garrapatas",
]]
script = ExtResource( 1 )

[node name="cuerpo" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="RayoLaserGarrapatas" parent="CollisionShape2D" instance=ExtResource( 3 )]
visible = false
position = Vector2( 2.14182, -16.1114 )

[node name="RayoLaserGarrapatas2" parent="CollisionShape2D" instance=ExtResource( 3 )]
visible = false
position = Vector2( -6.04988, -16.4379 )

[node name="ojo_detras_2" type="Position2D" parent="."]
position = Vector2( -171.042, 119.849 )

[node name="ojo_detras_1" type="Position2D" parent="."]
position = Vector2( -146.438, -146.041 )

[node name="ojo_delante_2" type="Position2D" parent="."]
position = Vector2( 177.789, 96.8315 )

[node name="ojo_delante_1" type="Position2D" parent="."]
position = Vector2( 162.709, -125.405 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.52441, -984.189 )

[node name="desaparicion" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="desaparicion" to="." method="_on_desaparicion_timeout"]
